minor front-end bugs squashed

--- a/ghi/src/DetailsPage.css
+++ b/ghi/src/DetailsPage.css
@@ -69,3 +69,15 @@ td {
   justify-content: space-between;
   align-items: center;
 }
+
+.navlink {
+  font: bold 24px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
